Fix regression my-account menu overflow-x on screen width < 800px (#2707)
* Fix: correct my-account menu overflow-x on touchscreens

* Add menuLeftDisplayed support for account-sub-menu

* Handle menu in screen service + clean top-menu-dropdown

* Add comment on menuWidth menu service to allow backtracking

--- a/client/src/sass/application.scss
+++ b/client/src/sass/application.scss
@@ -320,6 +320,7 @@ table {
         padding-left: 15px;
         padding-right: 15px;
         margin-bottom: $sub-menu-margin-bottom-small-view;
+        overflow-x: auto;
       }
 
       .admin-sub-header {
@@ -387,6 +388,11 @@ table {
     &:not(.expanded) {
       .admin-sub-header {
         @include admin-sub-header-responsive($expanded-horizontal-margins/3 + $menu-width/2);
+      }
+
+      .sub-menu {
+        overflow-x: auto;
+        width: calc(100vw - #{$menu-width});
       }
     }
   }
